--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
 html, body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  background-color: #000;
+  touch-action: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  user-select: none;
 }
 canvas {
   display: block;
+  touch-action: none;
 }
